--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tailwind": "npx tailwindcss -i static/css/input.css -o templates/css/style.css --watch"
+    "tailwind": "npx tailwindcss -i static/css/input.css -o static/css/style.css --watch"
   },
   "author": "",
   "license": "",
